--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -18,6 +18,8 @@
     ],
     "rules": {
         "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+        "quotes": ["error", "single"],
+        "semi": ["error", "never"]
     }
 }
