--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "author": "",
   "license": "ISC",
   "description": "",
   "scripts": {
-    "dev": "tsc --watch",
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "dev": "nodemon",
+    "watch": "tsc --watch",
     "lint": "eslint --ext .js,.ts",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +22,7 @@
     "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
