--- a/package.json
+++ b/package.json
@@ -3,6 +3,5 @@
   "version": "1.0.0",
   "description": "",
   "author": "",
-  "license": "ISC",
-  "workspaces": ["client", "server"]
+  "license": "ISC"
 }
